# temoto_er_manager

./: CMakeLists.txt  README.md  package.xml
examples/: test_er_client_node.cpp  test_pm_client_node.cpp
include/temoto_er_manager/: temoto_er_manager.h  temoto_er_manager_interface.h  temoto_er_manager_services.h
include/temoto_process_manager/: process_manager.hpp  process_manager_interface.hpp  process_manager_services.hpp
src/: process_manager.cpp  process_manager_node.cpp  temoto_er_manager.cpp  temoto_er_manager_node.cpp
srv/: LoadExtResource.srv  LoadProcess.srv
