<?xml version="1.0"?>
<package format="2">
  <name>temoto_er_manager</name>
  <version>0.0.0</version>
  <description>The temoto_er_manager package</description>

  <maintainer email="robert.valner@ut.ee">Robert Valner</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>std_msgs</build_depend>
	<build_depend>message_generation</build_depend>
  <build_depend>temoto_core</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>std_msgs</exec_depend>
	<exec_depend>message_runtime</exec_depend>
  <exec_depend>temoto_core</exec_depend>

</package>
