<?xml version="1.0"?>
<package format="2">
  <name>temoto_process_manager</name>
  <version>0.0.0</version>
  <description>Process Manager allows to dynamically invoke programs (processes),
including ROS executables, ROS launch files and regular executables.</description>

  <maintainer email="robert.valner@ut.ee">Robert Valner</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>std_msgs</depend>
	<depend>message_generation</depend>
  <depend>temoto_resource_registrar</depend>

</package>
